# testapi

./: .gitignore  .pylintrc  README.md
.github/: get_color.sh
.github/workflows/: ci_cd.yaml  promote.yaml
IaC/: backend.tf  main.tf  provider.tf  vars.tf
IaC/dev/: .terraform.lock.hcl  backend.tf  main.tf  vars.tf
IaC/prod/: backend.tf  main.tf  vars.tf
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/routers/: health.py  hello.py
backend/tests/: .pylintrc  test_app.py
