[project]
name = "app"
version = "0.1.0"
description = "A simple backend written with FastAPI, uv"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "genbadge>=1.1.1",
    "defusedxml>=0.7.1",
    "rustworkx>=0.15.1",
    "checkov>=3.1.47",
]
